# libsnark-tutorial

./: .gitignore  .gitmodules  LICENSE  README.md
src/: CMakeLists.txt  gadget-model.hpp  gadget-model2.hpp  gendata.cpp  model.cpp  model2.cpp  model3.cpp  receiver.cpp  temp.cpp  test-knowledge-preimage.cpp  test-sha256.cpp  verifier-orifinal.cpp  verifier.cpp  verifierKey  verifier_primary_input  verifier_primary_input_x  verifier_proof
